--- a/.github/workflows/check_update.yml
+++ b/.github/workflows/check_update.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add istoreos.yml
+          git add .github/workflows/istoreos.yml
           git commit -m "Update iStoreOS image URL to latest version" || echo "No changes to commit"
           git push
 
@@ -41,6 +41,6 @@ jobs:
         run: |
           echo "检测到新版本，触发构建工作流..."
           # 使用 GitHub CLI 触发工作流
-          gh workflow run istoreos.yml
+          gh workflow run "Build iStoreOS Scratch Docker Image and Push to Docker Hub"
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
