--- a/.github/workflows/check_update.yml
+++ b/.github/workflows/check_update.yml
@@ -7,12 +7,13 @@ on:
   # 允许手动触发
   workflow_dispatch:
 
+# permissions:
+#   contents: write
+#   actions: write
+
 jobs:
   check-and-build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      workflows: write  # 添加 workflows 写入权限
     
     steps:
       - name: Checkout repository
