--- a/.github/workflows/check_update.yml
+++ b/.github/workflows/check_update.yml
@@ -7,10 +7,7 @@ on:
   # 允许手动触发
   workflow_dispatch:
 
-permissions:
-  contents: write
-  actions: write
-  workflows: write
+permissions: write-all
 
 jobs:
   check-and-build:
@@ -36,9 +33,9 @@ jobs:
           git config --local user.name "GitHub Action"
           git add .github/workflows/istoreos.yml
           git commit -m "Update iStoreOS image URL to latest version" || echo "No changes to commit"
-          git push "https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git" HEAD:${GITHUB_REF#refs/heads/}
+          git push "https://${GITHUB_ACTOR}:${{ secrets.WORKFLOW_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git" HEAD:${GITHUB_REF#refs/heads/}
         env:
-          GITHUB_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
 
       # 如果检测到更新，则触发构建工作流
       - name: Install GitHub CLI
@@ -58,4 +55,4 @@ jobs:
           # 使用 GitHub CLI 触发工作流
           gh workflow run "Build iStoreOS Scratch Docker Image and Push to Docker Hub"
         env:
-          GITHUB_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
