--- a/.github/workflows/check_update.yml
+++ b/.github/workflows/check_update.yml
@@ -7,7 +7,9 @@ on:
   # 允许手动触发
   workflow_dispatch:
 
-permissions: write-all
+permissions:
+  contents: write
+  actions: write
 
 jobs:
   check-and-build:
@@ -23,36 +25,38 @@ jobs:
       - name: Check for updates
         id: check-update
         run: |
+          echo "开始检查更新..."
           ./update_istoreos_image.sh
+          
+          # 显示更详细的调试信息
+          echo "GitHub output file content:"
+          cat $GITHUB_OUTPUT || echo "GitHub output file not found"
+          echo "Updated status: $(cat $GITHUB_OUTPUT | grep updated || echo 'not found')"
+          
+          # 显示工作流文件的更改
+          echo "Changes in workflow file (if any):"
+          git diff .github/workflows/istoreos.yml || echo "No changes detected"
         shell: bash
 
-      - name: Commit changes if needed
+      - name: Commit and push if changed
         if: steps.check-update.outputs.updated == 'true'
         run: |
+          # 配置 Git
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
+          
+          # 获取新版本信息
+          NEW_VERSION=$(grep -o 'https://fw0.koolcenter.com/iStoreOS/x86_64_efi/[^ ]*' .github/workflows/istoreos.yml | head -n 1 | grep -o '[0-9]\{10\}')
+          
+          # 提交更改
           git add .github/workflows/istoreos.yml
-          git commit -m "Update iStoreOS image URL to latest version" || echo "No changes to commit"
-          git push "https://${GITHUB_ACTOR}:${{ secrets.WORKFLOW_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git" HEAD:${GITHUB_REF#refs/heads/}
-        env:
-          GITHUB_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
-
-      # 如果检测到更新，则触发构建工作流
-      - name: Install GitHub CLI
-        if: steps.check-update.outputs.updated == 'true'
-        run: |
-          type -p curl >/dev/null || (sudo apt update && sudo apt install curl -y)
-          curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg \
-          && sudo chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg \
-          && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null \
-          && sudo apt update \
-          && sudo apt install gh -y
+          git commit -m "Update iStoreOS image to version $NEW_VERSION"
+          git push
 
       - name: Trigger Build Workflow
         if: steps.check-update.outputs.updated == 'true'
         run: |
           echo "检测到新版本，触发构建工作流..."
-          # 使用 GitHub CLI 触发工作流
           gh workflow run "Build iStoreOS Scratch Docker Image and Push to Docker Hub"
         env:
-          GITHUB_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
