--- a/.github/workflows/istoreos.yml
+++ b/.github/workflows/istoreos.yml
@@ -1,11 +1,11 @@
 name: Build iStoreOS Scratch Docker Image and Push to Docker Hub
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - '.github/workflows/istoreos.yml' # 更新文件路径
+  # push:
+  #   branches:
+  #     - main
+  #   paths:
+  #     - '.github/workflows/istoreos.yml' # 更新文件路径
   workflow_dispatch:     # 保留手动触发选项作为备用
 
 jobs:
@@ -23,31 +23,30 @@ jobs:
 
       - name: Download iStoreOS image
         run: |
-          wget https://fw0.koolcenter.com/iStoreOS/x86_64_efi/istoreos-24.10.1-2025060614-x86-64-squashfs-combined-efi.img.gz
+          wget https://fw0.koolcenter.com/iStoreOS/x86_64_efi/istoreos-24.10.1-2025062010-x86-64-squashfs-combined-efi.img.gz
 
-      # 从URL中提取日期部分
       - name: Extract date from URL
         id: extract_date
         run: |
-          # 从URL中提取日期部分（2025060614）
-          URL="https://fw0.koolcenter.com/iStoreOS/x86_64_efi/istoreos-24.10.1-2025060614-x86-64-squashfs-combined-efi.img.gz"
+          # 从 URL 中提取日期部分（2025062010）
+          URL="https://fw0.koolcenter.com/iStoreOS/x86_64_efi/istoreos-24.10.1-2025062010-x86-64-squashfs-combined-efi.img.gz"
           DATE=$(echo "$URL" | grep -oE '[0-9]{10}')
           echo "Extracted date: $DATE"
           echo "date=$DATE" >> $GITHUB_OUTPUT
 
       - name: Decompress the image
         run: |
-          gzip -d istoreos-24.10.1-2025060614-x86-64-squashfs-combined-efi.img.gz
+          gzip -d istoreos-24.10.1-2025062010-x86-64-squashfs-combined-efi.img.gz
 
       - name: Rename image file
         run: |
-          mv istoreos-24.10.1-2025060614-x86-64-squashfs-combined-efi.img istoreos.img
+          mv istoreos-24.10.1-2025062010-x86-64-squashfs-combined-efi.img istoreos.img
 
       - name: Analyze image with binwalk and extract squashfs
         run: |
           binwalk istoreos.img > binwalk_output.txt
 
-          # 提取 squashfs 的偏移和大小（根据实际输出调整）
+          # 提取 squashfs 的偏移和大小
           OFFSET=$(grep "Squashfs filesystem" binwalk_output.txt | head -n 1 | awk '{print $1}')
           SIZE=$(grep "Squashfs filesystem" binwalk_output.txt | head -n 1 | awk '{print $4}')
 
@@ -78,7 +77,7 @@ jobs:
           docker build -t istoreos:latest .
 
       # 登录到 Docker Hub
-      - name: 登录到 Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -90,16 +89,16 @@ jobs:
           DATE=${{ steps.extract_date.outputs.date }}
           echo "Tagging image with date: $DATE"
           
-          # 打上日期标签和latest标签
-          docker tag istoreos:latest $DOCKER_HUB_USERNAME/istoreos:$DATE
-          docker tag istoreos:latest $DOCKER_HUB_USERNAME/istoreos:latest
+          # 打上日期标签和 latest 标签
+          docker tag istoreos:latest ${{ secrets.DOCKER_USERNAME }}/istoreos:$DATE
+          docker tag istoreos:latest ${{ secrets.DOCKER_USERNAME }}/istoreos:latest
 
       - name: Push Docker image to Docker Hub
         run: |
           # 推送两个标签的镜像
           DATE=${{ steps.extract_date.outputs.date }}
           echo "Pushing image with date tag: $DATE"
-          docker push $DOCKER_HUB_USERNAME/istoreos:$DATE
+          docker push ${{ secrets.DOCKER_USERNAME }}/istoreos:$DATE
           
-          # echo "Pushing image with latest tag"
-          # docker push $DOCKER_HUB_USERNAME/istoreos:latest
+          echo "Pushing image with latest tag"
+          docker push ${{ secrets.DOCKER_USERNAME }}/istoreos:latest
