--- a/.github/workflows/check_update.yml
+++ b/.github/workflows/check_update.yml
@@ -1,4 +1,4 @@
-name: Check iStoreOS Update
+name: Check iStoreOS Update and Build Docker Image
 
 on:
   schedule:
@@ -9,7 +9,7 @@ on:
       - main            # 只在 main 分支上运行
 
 jobs:
-  check-update:
+  check-update-and-build:
     runs-on: ubuntu-latest
     permissions:
       contents: write   # 授予写入权限
@@ -25,67 +25,94 @@ jobs:
           chmod +x ./update_istoreos_image.sh
           ./update_istoreos_image.sh
 
-      - name: Update README if needed
+      - name: Install required packages
         if: steps.check.outputs.updated == 'true'
         run: |
-          # 创建或更新 README.md 文件
-          cat > README.md << 'EOF'
+          sudo apt-get update
+          sudo apt-get install -y qemu-utils nbd-client
+
+      - name: Process image
+        if: steps.check.outputs.updated == 'true'
+        id: process
+        run: |
+          chmod +x ./process_image.sh
+          sudo ./process_image.sh ${{ steps.check.outputs.url }}
+          echo "rootfs_path=istoreos.rootfs.tar.gz" >> $GITHUB_OUTPUT
+
+      - name: Update README
+        if: steps.check.outputs.updated == 'true'
+        run: |
+          cat > README.md << EOF
           # iStoreOS Docker
 
-          这个项目提供了一个自动化工具，用于检查和更新 iStoreOS 的最新版本。
+          这个项目提供了一个自动化工具，用于检查和更新 iStoreOS 的最新版本，并构建 Docker 镜像。
 
           ## 最新版本
 
           最新的 iStoreOS 镜像 URL: ${{ steps.check.outputs.url }}
           更新日期: ${{ steps.check.outputs.date }}
 
-          ## 功能
+          ## Docker 镜像
 
-          - 自动检查 iStoreOS 的最新版本
-          - 当检测到新版本时，自动更新版本信息
-          - 支持通过 GitHub Actions 自动运行或手动触发
+          Docker Hub: https://hub.docker.com/${{ secrets.DOCKERHUB_USERNAME }}/istoreos
 
-          ## 文件说明
-
-          - `update_istoreos_image.sh`: 检查 iStoreOS 最新版本的脚本
-          - `.github/workflows/check_update.yml`: GitHub Actions 工作流配置
+          可用标签:
+          - \`latest\`: 始终指向最新版本
+          - \`${{ steps.check.outputs.date }}\`: 特定版本的时间戳
 
           ## 使用方法
 
-          ### 自动检查更新
-
-          工作流程已配置为每天自动运行。无需手动干预，系统会自动检查更新并更新版本信息。
-
-          ### 手动触发检查
-
-          1. 在 GitHub 仓库页面，点击 "Actions" 标签
-          2. 选择 "Check iStoreOS Update" 工作流
-          3. 点击 "Run workflow" 按钮
-          4. 选择 "main" 分支
-          5. 点击 "Run workflow" 按钮确认
-
-          ### 本地运行脚本
-
-          如果需要在本地运行脚本，可以使用以下命令：
-
           ```bash
-          chmod +x update_istoreos_image.sh
-          ./update_istoreos_image.sh
+          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/istoreos:latest
+          docker run -d --name istoreos ${{ secrets.DOCKERHUB_USERNAME }}/istoreos:latest
           ```
 
-          ## 注意事项
+          ## 功能
 
-          - 工作流仅在 main 分支上运行
-          - 脚本依赖于 iStoreOS 官方网站的 URL 结构，如果官方网站更改了 URL 结构，可能需要更新脚本
+          - 自动检查 iStoreOS 的最新版本
+          - 当检测到新版本时，自动构建 Docker 镜像
+          - 自动发布到 GitHub Releases 和 Docker Hub
           EOF
 
-      - name: Commit and push if changed  # 提交更改
+      - name: Create Release
+        if: steps.check.outputs.updated == 'true'
+        id: create_release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{ steps.check.outputs.date }}
+          name: iStoreOS Release ${{ steps.check.outputs.date }}
+          body: |
+            iStoreOS 版本更新
+            
+            URL: ${{ steps.check.outputs.url }}
+            日期: ${{ steps.check.outputs.date }}
+          files: |
+            ${{ steps.process.outputs.rootfs_path }}
+          draft: false
+          prerelease: false
+
+      - name: Login to Docker Hub
+        if: steps.check.outputs.updated == 'true'
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Build and push Docker image
+        if: steps.check.outputs.updated == 'true'
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/istoreos:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/istoreos:${{ steps.check.outputs.date }}
+
+      - name: Commit and push if changed
         if: steps.check.outputs.updated == 'true'
         run: |
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
           git add README.md
-          git commit -m "Update iStoreOS image URL to ${{ steps.check.outputs.date }}"
+          git commit -m "Update iStoreOS to version ${{ steps.check.outputs.date }}"
           git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}  # GitHub Token 用于推送更改
