--- a/.github/workflows/check_update.yml
+++ b/.github/workflows/check_update.yml
@@ -23,6 +23,7 @@ jobs:
         id: check
         run: |
           chmod +x ./update_istoreos_image.sh
+          echo $pwd
           ./update_istoreos_image.sh
 
       - name: Install required packages
