--- a/.github/workflows/check_update.yml
+++ b/.github/workflows/check_update.yml
@@ -36,7 +36,7 @@ jobs:
         id: process
         run: |
           chmod +x ./process_image.sh
-          sudo ./process_image.sh ${{ steps.check.outputs.url }}
+          sudo ./process_image.sh ${{ steps.check.outputs.url }}  $GITHUB_WORKSPACE
           echo "rootfs_path=istoreos.rootfs.tar.gz" >> $GITHUB_OUTPUT
 
       - name: Update README
