--- a/.github/workflows/check_update.yml
+++ b/.github/workflows/check_update.yml
@@ -34,9 +34,11 @@ jobs:
       - name: Process image
         if: steps.check.outputs.updated == 'true'
         id: process
+        env:
+          GITHUB_WORKSPACE: ${{ github.workspace }}
         run: |
           chmod +x ./process_image.sh
-          ./process_image.sh ${{ steps.check.outputs.url }}  $GITHUB_WORKSPACE
+          sudo ./process_image.sh ${{ steps.check.outputs.url }}  $GITHUB_WORKSPACE
           echo "rootfs_path=istoreos.rootfs.tar.gz" >> $GITHUB_OUTPUT
 
       - name: Update README
