--- a/.github/workflows/check_update.yml
+++ b/.github/workflows/check_update.yml
@@ -51,7 +51,8 @@ jobs:
 
           ## 最新版本
 
-          - 最新的 iStoreOS 镜像 URL:\n${{ steps.check.outputs.url }}
+          - 最新的 iStoreOS 镜像 URL:
+            ${{ steps.check.outputs.url }}
           - 更新日期: ${{ steps.check.outputs.date }}
 
           ## Docker 镜像
