--- a/.github/workflows/check_update.yml
+++ b/.github/workflows/check_update.yml
@@ -2,7 +2,7 @@ name: Check iStoreOS Update and Build Docker Image
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # 每天运行一次
+    - cron: '0 */4 * * *'  # 每 4 小时运行一次（UTC 时间）
   workflow_dispatch:      # 允许手动触发
   push:
     branches:
@@ -21,8 +21,6 @@ jobs:
 
       - name: Check for updates
         id: check
-        env:
-          GH_WORKSPACE: ${{ github.workspace }}
         run: |
           chmod +x ./update_istoreos_image.sh
           ./update_istoreos_image.sh
@@ -66,6 +64,7 @@ jobs:
           ## 使用方法
 
           ```bash
+
           docker pull ${{ secrets.DOCKERHUB_USERNAME }}/istoreos:latest
 
           docker run -d --name istoreos ${{ secrets.DOCKERHUB_USERNAME }}/istoreos:latest
@@ -93,7 +92,6 @@ jobs:
             URL: ${{ steps.check.outputs.url }}
             日期: ${{ steps.check.outputs.date }}
           files: |
-            # ${{ steps.process.outputs.rootfs_path }}
             /github/workspace/istoreos.rootfs.tar.gz
           draft: false
           prerelease: false
@@ -105,6 +103,13 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
+      - name: login GitHub Container Registry (GHCR)
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GH_TOKEN }}
+
       - name: Build and push Docker image
         if: steps.check.outputs.updated == 'true'
         uses: docker/build-push-action@v4
@@ -115,6 +120,8 @@ jobs:
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/istoreos:latest
             ${{ secrets.DOCKERHUB_USERNAME }}/istoreos:${{ steps.check.outputs.date }}
+            ghcr.io/${{ github.actor }}/istoreos:latest
+            ghcr.io/${{ github.actor }}/istoreos:${{ steps.check.outputs.date }}
 
       - name: Commit and push if changed
         if: steps.check.outputs.updated == 'true'
