--- a/.github/workflows/check_update.yml
+++ b/.github/workflows/check_update.yml
@@ -104,6 +104,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: login GitHub Container Registry (GHCR)
+        if: steps.check.outputs.updated == 'true'
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
