--- a/.github/workflows/check_update.yml
+++ b/.github/workflows/check_update.yml
@@ -55,7 +55,7 @@ jobs:
 
           ## Docker 镜像
 
-          Docker Hub: https://hub.docker.com/${{ secrets.DOCKERHUB_USERNAME }}/istoreos
+          Docker Hub: https://hub.docker.com/r/${{ secrets.DOCKERHUB_USERNAME }}/istoreos
 
           可用标签:
           - \`latest\`: 始终指向最新版本
